@@ -65,12 +65,12 @@
 
   <properties>
     <java.version>11</java.version>
-    <ojdbc.version>21.5.0.0</ojdbc.version>
+    <ojdbc.version>21.7.0.0</ojdbc.version>
     <r2dbc.version>1.0.0.RELEASE</r2dbc.version>
-    <reactor.version>2020.0.19</reactor.version>
+    <reactor.version>3.5.0</reactor.version>
     <reactive-streams.version>1.0.3</reactive-streams.version>
-    <junit.version>5.8.2</junit.version>
-    <spring-jdbc.version>5.2.6.RELEASE</spring-jdbc.version>
+    <junit.version>5.9.1</junit.version>
+    <spring-jdbc.version>5.3.19</spring-jdbc.version>
     <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
   </properties>
 
@@ -86,18 +86,10 @@
             <arg>-Xlint:-options</arg>
             <arg>-Xlint:-processing</arg>
             <arg>-Xlint:-serial</arg>
+            <!-- LDAP URL tests require the java.naming module -->
+            <testCompilerArgument>--add-modules</testCompilerArgument>
+            <testCompilerArgument>java.naming</testCompilerArgument>
           </compilerArgs>
-          <!-- LDAP URL tests require the java.naming module -->
-          <!-- Maven seems to ignore the forceJavacCompilerUse.
-            This results in an error when passing the addModules option to
-            the javax.tools API. For this reason, Oracle R2DBC's module-info is
-            declaring a depency on the java.naming module.
-            TODO: Figure out how to make maven compile tests correctly, and 
-            remove the java.naming depenency from Oracle R2DBC.
-          <fork>true</fork>
-          <forceJavacCompilerUse>true</forceJavacCompilerUse>
-          <testCompilerArgument>- -add-modules java.naming</testCompilerArgument>
-          -->
           <showWarnings>true</showWarnings>
           <release>${java.version}</release>
         </configuration>
@@ -166,6 +158,8 @@
             <include>**/*Test.java</include>
             <include>**/*TestKit.java</include>
           </includes>
+          <!-- LDAP URL tests require the java.naming module -->
+          <argLine>--add-reads com.oracle.database.r2dbc=java.naming</argLine>
         </configuration>
       </plugin>
       <plugin>
@@ -226,18 +220,6 @@
   </build>
 
 
-  <dependencyManagement>
-    <dependencies>
-      <dependency>
-        <groupId>io.projectreactor</groupId>
-        <artifactId>reactor-bom</artifactId>
-        <version>${reactor.version}</version>
-        <type>pom</type>
-        <scope>import</scope>
-      </dependency>
-    </dependencies>
-  </dependencyManagement>
-
   <dependencies>
     <!-- Oracle R2DBC Driver Dependencies -->
     <dependency>
@@ -253,6 +235,7 @@
     <dependency>
       <groupId>io.projectreactor</groupId>
       <artifactId>reactor-core</artifactId>
+      <version>${reactor.version}</version>
     </dependency>
     <dependency>
       <groupId>org.reactivestreams</groupId>
@@ -283,11 +266,6 @@
       <groupId>org.springframework</groupId>
       <artifactId>spring-jdbc</artifactId>
       <version>${spring-jdbc.version}</version>
-      <scope>test</scope>
-    </dependency>
-    <dependency>
-      <groupId>io.projectreactor</groupId>
-      <artifactId>reactor-test</artifactId>
       <scope>test</scope>
     </dependency>
   </dependencies>
